# user-data-service

./: .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  esbuild.config.js  launch.sh  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml
__tests__/: index.ts
lib/: index.ts  knexfile.ts  server.ts
lib/model/: access_request.ts  index.ts  oauth_profile.ts  user.ts  user_terms_acceptance.ts
lib/route/: index.ts  oauth_profile.ts  user.ts  user_terms_acceptance.ts
migrations/: 20240620153200_baseline.sql  202406201532_initial_tables.ts  202411211224_access_perms.ts  202411221154_access_until.ts  202504090856_picture_image_id.ts  202504091730_terms.ts
src/: config.rs  db.rs  main.rs
src/models/: access_request.rs  mod.rs  oauth_profile.rs  user.rs  user_terms_acceptance.rs
src/routes/: mod.rs  oauth_profile.rs  user.rs  user_terms_acceptance.rs
static/: index.html
